--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,15 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+      <span class='logo'>tweeter</span>
+      <span class ="write-tweet">Write a new tweet</span>
+      <div class="click-tweet">
+        <button>
+        <i class="fas fa-arrow-down"></i>
+        <i class="fas fa-arrow-down"></i>
+        <i class="fas fa-arrow-down"></i>
+        </button>
+      </div>
     </nav>
     <div id="spacer">
     </div>
@@ -62,7 +70,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="./tweets" method="POST">
+        <form class="submit-tweet">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
