--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       <span class='logo'>tweeter</span>
       <span class ="write-tweet">Write a new tweet</span>
       <div class="click-tweet">
-        <button>
+        <button id="show-tweet">
         <i class="fas fa-arrow-down"></i>
         <i class="fas fa-arrow-down"></i>
         <i class="fas fa-arrow-down"></i>
@@ -70,6 +70,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
+        <span id="error"></span>
         <form class="submit-tweet">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
