--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <span id="error"></span>
+        <span class="error"></span>
         <form class="submit-tweet">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
