added enter submit functionality and clear textbox clearing after successful submission

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class='logo'>tweeter</span>
-      <span class ="write-tweet">Write a new tweet</span>
+      <span class ="write-tweet"><b>Write</b> a new tweet</span>
       <div class="click-tweet">
         <button id="show-tweet">
         <i class="fas fa-arrow-down"></i>
@@ -60,7 +60,7 @@
       </div>
       <br>
       <div>
-          <h2>Your Name</h2>
+          <h2>Your <span>Name</span></h2>
       </div>
   </header>
     <div>
