added further commenting and added text-area auto expand functionality.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
+
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
     <!-- Meta Information -->
@@ -75,7 +75,7 @@
         <h2>Compose Tweet</h2>
         <span class="error"></span>
         <form class="submit-tweet">
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
+          <textarea class= "autoExpand" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
