added bottom arrow that shows depending on where the user is scrolled

--- a/public/index.html
+++ b/public/index.html
@@ -84,5 +84,8 @@
 
       </section>
     </main>
-  </body>
+      <div class="bottom">
+        <i class="fas fa-arrow-circle-up"></i>
+      </div>
+    </body>
 </html>
