added scroll to top button functionality

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
   </head>
 
-  <body>
+  <body id="page-top">
     <!-- Top nav bar (fixed) -->
     <nav id="nav">
       <span class='logo'>tweeter</span>
@@ -85,7 +85,9 @@
       </section>
     </main>
       <div class="bottom">
+        <button class="to-top">
         <i class="fas fa-arrow-circle-up"></i>
+        </button>
       </div>
     </body>
 </html>
