styled error message to look more apropreate

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,9 @@
     <main id="tweets" class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <span class="error"></span>
+        <div class ="error-container">
+          <span class="error"></span>
+        </div>
         <form class="submit-tweet">
           <textarea class= "autoExpand" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
