fixed bug with icons on tweets being mistakenly made visible

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
     </main>
       <div class="bottom">
         <button class="to-top">
-        <i class="fas fa-arrow-circle-up"></i>
+        <i class="top-arrow fas fa-arrow-circle-up"></i>
         </button>
       </div>
     </body>
